--- a/src/components/UI/button/Button.module.css
+++ b/src/components/UI/button/Button.module.css
@@ -1,7 +1,14 @@
 .button {
     padding: 5px 15px;
-    border: 2px solid #7d09ca;
+    border: 2px solid rgb(54, 124, 150);
     cursor: pointer;
-    background-color: transparent;
+    background-color: rgb(255,255,255);
     font-size: 15px;
+    font-weight: bold;
+    width: 100%;
+}
+.button:hover {
+    background-color: rgb(54, 124, 150);
+    transition: 0.3s;
+    color: rgb(255,255,255);
 }
