--- a/src/components/UI/input/Input.module.css
+++ b/src/components/UI/input/Input.module.css
@@ -1,7 +1,9 @@
 .input {
     width: 100%;
-    padding: 5px 15px;
+    padding: 7px 12px;
     margin: 5px 0;
-    border: 2px solid #7d09ca;
+    border: 2px solid rgb(54, 124, 150);
     font-size: 15px;
+    background-color: rgb(255,255,255);
+    font-size: 18px;
 }
