--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,6 @@
 * {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(34,36,40);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -19,5 +21,16 @@
     align-items: center;
     padding: 15px;
     margin-top: 15px;
-    border: 2px solid #7d09ca;
+    font-size: 18px;
+    background-color: rgb(255,255,255);
+    border: 2px solid rgb(54, 124, 150);
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+}
+
+.button__edit {
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
